# poolserver

./: .gitignore  CMakeLists.txt  LICENSE  README
cmake/: options.cmake  showoptions.cmake
cmake/macros/: FindGMP.cmake  FindMySQL.cmake
src/: CMakeLists.txt
src/server/: CMakeLists.txt
src/server/poolserver/: CMakeLists.txt  Main.cpp  poolserver.cfg.dist
src/server/poolserver/DataMgr/: DataMgr.cpp  DataMgr.h  Share.h
src/server/poolserver/Database/: ServerDatabaseEnv.cpp  ServerDatabaseEnv.h
src/server/poolserver/NetworkMgr/: NetworkMgr.cpp  NetworkMgr.h
src/server/poolserver/Server/: Server.cpp  Server.h
src/server/poolserver/Stratum/: Client.cpp  Client.h  Job.h  Server.cpp  Server.h  ShareLimiter.cpp  ShareLimiter.h
src/server/shared/: BigNum.h  ByteBuffer.h  CMakeLists.txt  Common.h  Crypto.cpp  Crypto.h  Exception.h  Util.cpp  Util.h
src/server/shared/Bitcoin/: BitCoinRPC.h  Bitcoin.h  Block.cpp  Block.h  Script.h  Serialization.cpp  Transaction.cpp  Transaction.h  VarInt.h
src/server/shared/Configuration/: Config.cpp  Config.h
src/server/shared/Database/: CMakeLists.txt  Database.h  DatabaseCallback.h  DatabaseEnv.h  Field.h  PreparedStatement.h  QueryResult.h  database.h
src/server/shared/Database/MySQL/: DatabaseConnectionMySQL.cpp  DatabaseConnectionMySQL.h  DatabaseEnvMySQL.h  DatabaseOperationMySQL.cpp  DatabaseOperationMySQL.h  DatabaseWorkerMySQL.cpp  DatabaseWorkerMySQL.h  DatabaseWorkerPoolMySQL.h  FieldMySQL.h  PreparedStatementMySQL.cpp  PreparedStatementMySQL.h  QueryResultMySQL.cpp  QueryResultMySQL.h
src/server/shared/JSON/: JSON.cpp  JSON.h  JSONReader.h
src/server/shared/JSONRPC/: JSONRPC.cpp  JSONRPC.h
src/server/shared/Logging/: Log.cpp  Log.h
src/server/shared/MySQL/: DatabaseCallback.h  DatabaseConnection.cpp  DatabaseConnection.h  DatabaseOperation.cpp  DatabaseOperation.h  DatabaseWorker.cpp  DatabaseWorker.h  DatabaseWorkerPool.cpp  DatabaseWorkerPool.h  Field.h  PreparedStatement.cpp  PreparedStatement.h  QueryResult.cpp  QueryResult.h
src/server/shared/Stratum/: CMakeLists.txt  Server.cpp  Server.h
